# predicting-synchrony

./: .gitignore  1_eda.ipynb  2_baseline.ipynb  Makefile  README.md  baselines.py  clean_data.py  cleaned_daily_A.pkl  cleaned_daily_B.pkl  cleaned_daily_C.pkl  cleaned_daily_D.pkl  cleaned_interval_A.pkl  cleaned_interval_B.pkl  cleaned_interval_C.pkl  cleaned_interval_D.pkl  cleaned_staffing.pkl  eda.ipynb  eda.py  forecast.py  pyproject.toml  submission_forecast.csv  vercel.json  ~$Data for Datathon (Revised).xlsx
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  styles.css
dashboard/src/components/: DailyTotalsTable.jsx  ForecastChart.jsx  Heatmap.jsx  KpiTiles.jsx  ModelConfig.jsx  PortfolioComparison.jsx  PortfolioSelector.jsx  ResidualsPanel.jsx  ScoreCard.jsx
data/exports/: dashboard.json  submission.csv  submission_ridge.csv
data/interim/: baseline_val_residuals.csv
pipeline/: __init__.py  config.py
pipeline/evaluate/: __init__.py  asymmetric_loss.py  backtest.py
pipeline/export/: __init__.py  to_dashboard.py  to_submission.py
pipeline/features/: __init__.py  calendar.py  lags.py  profiles.py
pipeline/ingest/: __init__.py  fetch_holidays.py  load_excel.py
pipeline/models/: __init__.py  calibrate.py  stage1_daily.py  stage2_shape.py
research/: 1_eda.ipynb  2_baseline.ipynb  3_validation.ipynb  4_final_model.ipynb  5_experiments.ipynb  Data for Datathon (Revised).xlsx  README.md
scripts/: build_dashboard_payload.py  run_backtest.py  run_pipeline.py
tests/: test_features.py  test_loss.py
